crates/core/tests/integration/snapshots/test_config_loading__partial_configuration.snap
---
source: tests/integration/test_config_loading.rs
expression: config
---
NewtonConfig {
    project: ProjectConfig {
        name: "minimal-test",
        template: None,
    },
    executor: ExecutorConfig {
        coding_agent: "",
        coding_agent_model: "zai-coding-plan/glm-4.7",
        auto_commit: false,
    },
    evaluator: EvaluatorConfig {
        test_command: None,
        score_threshold: 95.0,
    },
    advisor: AdvisorConfig,
    context: ContextConfig {
        clear_after_use: true,
        file: ".newton/state/context.md",
    },
    promise: PromiseConfig {
        file: ".newton/state/promise.txt",
    },
    workflow: WorkflowRuntimeConfig {
        state_dir: None,
    },
}
